got the top section working and added a picture folder.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,47 @@
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <header>
+    <nav>
+      <a href ="#">Home</a> 
+      <a href ="#">About</a> 
+      <a href ="#">Portfolio</a> 
+      <a href ="#">Contact</a> 
+    </nav>
+  </header>
+
+  <section class = "introduction">
+    <div class = "intro-top">
+      <img src = "img/webdev.jpeg" alt = "a picture of me!">
+      <h1>Victoria Topham - Web Dev</h1>
+      <h2>Technology is my jam!</h2>
+    </div>
+    <div class = "intro-bottom">
+      <p>Occasionally I'll take your money, let me know what you have in mind by signing up on this website.</p> 
+      <button>Let's Team Up</button>
+    </div>
+  </section>
+
+  <div class = "middle">
+    <div class = "about-me">
+      <h3>Listen Up</h3>
+      <p>Content about me, blah blah blah</p>
+    </div>
+    <div class ="good-at">
+      <p>Thing one</p>
+      <p>Thing two</p>
+      <p>Thing three</p>
+      <p>Thing four</p>
+      <p>Thing five</p>
+    </div>
+  </div>
+
+
 </body>
 </html>
