started working on the middle section, gotta go to lecture

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
     </nav>
   </header>
 
+  <!-- introduction  -->
   <section class = "introduction">
     <div class = "intro-top">
       <img src = "img/webdev.jpeg" alt = "a picture of me!">
       <h1>Victoria Topham - Web Dev</h1>
-      <h2>Technology is my jam!</h2>
+      <h3>Technology is my jam!</h3>
     </div>
     <div class = "intro-bottom">
       <p>Occasionally I'll take your money, let me know what you have in mind by signing up on this website.</p> 
@@ -38,19 +39,25 @@
     </div>
   </section>
 
+
+  <!-- middle stuff  -->
   <div class = "middle">
     <div class = "about-me">
-      <h3>Listen Up</h3>
-      <p>Content about me, blah blah blah</p>
+      <h2>Listen Up</h2>
+      <p>Content about me, blah blah blah Content about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blahContent about me, blah blah blah</p>
     </div>
     <div class ="good-at">
-      <p>Thing one</p>
-      <p>Thing two</p>
-      <p>Thing three</p>
-      <p>Thing four</p>
-      <p>Thing five</p>
+      <h2>Stuff I'm good at</h2>
+        <div>
+          <p>Thing one</p>
+          <p>Thing two</p>
+          <p>Thing three</p>
+          <p>Thing four</p>
+          <p>Thing five</p>
+      </div>
     </div>
   </div>
+
 
 
 </body>
