forgot to commit for a while! i've added the header and am working on the body for my resume.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,60 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|PT+Serif&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+  <div class = "border-container">
+    <div class = "container">
 
-  
+      <!-- name and stuff  -->
+      <header class = "top-container">
+        <div class = "name">
+          <h1>Victoria<br>Topham</h1>
+        </div>
+        <div class = "contact">
+          <div class = "remote">
+            <p>Say Hi!</p>
+            <p>(555) 555-5555</p>
+            <p>topham.victoria@gmail.com</p>
+            <p>github.com/vtopham</p>
+          </div>
+          <div class = "home">
+            <p>1 Market Street, San Francisco CA</p>
+            <p> </p>
+          </div>
+        </div>
+      </header>
 
+      <div class = "col-1">
+        <section class = "about-me">
+          <h2>About Me</h2>
+          <p>Hey there, my name is Victoria. I've made this resume so that you can check out my coding knowledge. I've populated this with enough content to look like a resume, but don't believe everything you read. To know more about me you'll have to answer my riddles three!</p>
+        </section>
+        <section class = "experience">
+          <h2>Experience</h2>
+          <p>You might think of experience as something that you gain through grit and real life challenges. I'm here to tell you all about a way that you can buy experience, no actual effort required! It's called my magical experience beans, and they're for sale for $9.99</p>
+        </section>
+      </div>
+
+      <div class = "col-2">
+        <section class = "skills">
+          <h2>Skills</h2>
+          <p></p>
+        </section>
+        <section class = "references">
+          <h2>References</h2>
+          <p></p>
+        </section>
+        <section class = "awards">
+          <h2>Awards</h2>
+          <p></p>
+        </section>
+      </div>
+
+    </div>
+  </div> 
 </body>
 </html>
