got some good content in there, now working on the css for the body

--- a/index.html
+++ b/index.html
@@ -39,33 +39,79 @@
         </div>
       </header>
 
-      <div class = "col-1">
-        <section class = "about-me">
-          <h2>About Me</h2>
-          <p>Hey there, my name is Victoria. I've made this resume so that you can check out my coding knowledge. I've populated this with enough content to look like a resume, but don't believe everything you read. To know more about me you'll have to answer my riddles three!</p>
-        </section>
-        <section class = "experience">
-          <h2>Experience</h2>
-          <p>You might think of experience as something that you gain through grit and real life challenges. I'm here to tell you all about a way that you can buy experience, no actual effort required! It's called my magical experience beans, and they're for sale for $9.99</p>
-        </section>
-      </div>
+      <!-- the actual content of the resume  -->
+      <section class = "main-content">
+        <div class = "col-1">
+          <section class = "content-box about-me">
+            <h2>About Me</h2>
+            <div class = "body-text">
+              <p>Hey there, my name is Victoria. I've made this resume so that you can check out my coding knowledge. I've populated this with enough content to look like a resume, but don't believe everything you read. To know more about me you'll have to answer my riddles three!</p>
+            </div>
+          </section>
 
-      <div class = "col-2">
-        <section class = "skills">
-          <h2>Skills</h2>
-          <p></p>
-        </section>
-        <section class = "references">
-          <h2>References</h2>
-          <p></p>
-        </section>
-        <section class = "awards">
-          <h2>Awards</h2>
-          <p></p>
-        </section>
-      </div>
+          <section class = "content-box experience">
+            <h2>Experience</h2>
+            <div class = "body-text">
+              <div class = "job">
+                <p>2018 - 2019</p>
+                <p>fake title</p>
+                <p>fake company</p>
+              </div>
+              <div class = "job">
+                <p>2015 - 2018</p>
+                <p>fake title</p>
+                <p>fake company</p>
+              </div>
+              <div class = "job">
+                <p>2011 - 2015</p>
+                <p>fake title</p>
+                <p>fake company</p>
+              </div>
+              <p></p>
+            </div>
+          </section>
+        </div>
 
-    </div>
-  </div> 
+        <div class = "col-2">
+          <section class = "content-box skills">
+            <h2>Skills</h2>
+            <div class = "body-text">
+              <p>I could probably do a backflip</p>
+              <p>I make dope chocolate chip cookies</p>
+              <p>I'm pretty good with Google Sheets</p>
+            </div>
+          </section>
+          <section class = "content-box references">
+            <h2>References</h2>
+            <div class = "body-text">
+              <div class = "ref">
+                <p>Reference Name</p>
+                <p>reference company</p>
+                <p>Reference email</p>
+              </div>
+              <div class = "ref">
+                <p>Reference Name</p>
+                <p>reference company</p>
+                <p>Reference email</p>
+              </div>
+              <div class = "ref">
+                <p>Reference Name</p>
+                <p>reference company</p>
+                <p>Reference email</p>
+              </div>
+            </div>
+          </section>
+          <section class = "content-box awards">
+            <h2>Awards</h2>
+            <div class = "body-text">
+              <p>Best-Fake-Resume-Builder, 2019</p>
+              <p>Most annoying street musician, 2025</p>
+            </div>
+          </section>
+        </div>
+
+      </div>
+    </div> 
+  </section>
 </body>
 </html>
