finished styling and added a background image

--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
   <div class = "border-container">
     <div class = "container">
 
+    <header>
+      <nav>
+        <a href = "#">About Me</a>
+        <a href = "#">My Projects</a>
+        <a href = "#">Birth Chart</a>
+        <a href = "#">Blacklisted Countries</a>
+      </nav>
+    </header>
+
       <!-- name and stuff  -->
-      <header class = "top-container">
+      <section class = "top-container">
         <div class = "name">
           <h1>Victoria<br>Topham</h1>
         </div>
@@ -37,7 +46,7 @@
             <p> </p>
           </div>
         </div>
-      </header>
+      </section>
 
       <!-- the actual content of the resume  -->
       <section class = "main-content">
@@ -53,19 +62,19 @@
             <h2>Experience</h2>
             <div class = "body-text">
               <div class = "job">
-                <p>2018 - 2019</p>
-                <p>fake title</p>
-                <p>fake company</p>
+                <p>2018 - 2019<br>
+                Bohemian Layabout<br>
+                Self-Employed</p>
               </div>
               <div class = "job">
-                <p>2015 - 2018</p>
-                <p>fake title</p>
-                <p>fake company</p>
+                <p>2015 - 2018<br>
+                Russian Spy<br>
+                Facebook</p>
               </div>
               <div class = "job">
-                <p>2011 - 2015</p>
-                <p>fake title</p>
-                <p>fake company</p>
+                <p>2011 - 2015<br>
+                Baby Chicken<br>
+                A Farm Upstate</p>
               </div>
               <p></p>
             </div>
@@ -76,28 +85,30 @@
           <section class = "content-box skills">
             <h2>Skills</h2>
             <div class = "body-text">
-              <p>I could probably do a backflip</p>
-              <p>I make dope chocolate chip cookies</p>
-              <p>I'm pretty good with Google Sheets</p>
+              <ul>
+                <li>I could probably do a backflip</li>
+                <li>I make dope chocolate chip cookies</li>
+                <li>I'm pretty good with Google Sheets</li>
+              </ul>
             </div>
           </section>
           <section class = "content-box references">
             <h2>References</h2>
             <div class = "body-text">
               <div class = "ref">
-                <p>Reference Name</p>
-                <p>reference company</p>
-                <p>Reference email</p>
+                <p>Bernie Sanders<br>
+                U.S. Senate<br>
+                bernie@aol.com</p>
               </div>
               <div class = "ref">
-                <p>Reference Name</p>
-                <p>reference company</p>
-                <p>Reference email</p>
+                <p>Darth Vader<br>
+                Axis Of Evil<br>
+                mouthbreather@hotmail.com</p>
               </div>
               <div class = "ref">
-                <p>Reference Name</p>
-                <p>reference company</p>
-                <p>Reference email</p>
+                <p>Tyler Biswell<br>
+                Lambda School<br>
+                TBtheTL@gmail.com</p>
               </div>
             </div>
           </section>
